Adding the Fav Icon

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -21,8 +21,8 @@
     />
     <!-- MDB -->
     <link rel="stylesheet" href="css/mdb.min.css"/>
-    <!--form-->
-    <link rel="shortcut icon" th:href="@{/favicon/favicon.ico}" type="image/x-icon">
+    <!--Fav icon-->
+    <link rel="shortcut icon" th:href="@{/favicon_io/favicon.ico}" type="image/x-icon">
     <title>Home</title>
 </head>
 <body>
