--- a/src/main/resources/templates/reportEdit.html
+++ b/src/main/resources/templates/reportEdit.html
@@ -20,6 +20,8 @@
   />
   <!-- MDB -->
   <link rel="stylesheet" th:href="@{/css/mdb.min.css}" />
+  <!--Fav icon-->
+  <link rel="shortcut icon" th:href="@{/favicon_io/favicon.ico}" type="image/x-icon">
     <title>Editar reporte</title>
 </head>
 <body>
