--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -18,6 +18,8 @@
     />
     <!-- MDB -->
     <link rel="stylesheet" href="css/mdb.min.css"/>
+    <!--Fav icon-->
+    <link rel="shortcut icon" th:href="@{/favicon_io/favicon.ico}" type="image/x-icon">
     <title>Login</title>
 </head>
 <body  style="background-color:#fff;">
