--- a/src/main/resources/templates/reportsList.html
+++ b/src/main/resources/templates/reportsList.html
@@ -21,6 +21,8 @@
   />
   <!-- MDB -->
   <link rel="stylesheet" href="css/mdb.min.css"/>
+  <!--Fav icon-->
+  <link rel="shortcut icon" th:href="@{/favicon_io/favicon.ico}" type="image/x-icon">
     <title>Reportes</title>
 </head>
 <body>
